--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Taegyun Jeon</title>
+		<title>Uday Kiran</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -28,8 +28,10 @@
         <div id="navbar" class="navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="publications.html">Publications</a></li>
-                <li><a href="blog/index.html">Blog</a></li>
+                <li><a href="publications.html">Talks/Seminars/Workshops</a></li>
+                <li><a href="blog/index.html">Community</a></li>
+								<li><a href="projects/index.html">Projects</a></li>
+								<li><a href="certification/index.html">Certifications</a></li>
                 <li><a href="files/cv-tgjeon.pdf">CV</a></li>
             </ul>
         </div>
@@ -39,17 +41,22 @@
 		<div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <img class="img-rounded" src="images/tgjeon.jpg" style="width:90%"  alt="">
+      <img class="img-rounded" src="images/udaykiran.jpg" style="width:90%"  alt="">
     </div>
     <div class="col-sm-8">
 
-      <p style="font-weight:100;font-size:25px">I'm a senior researcher at <a href="https://www.satreci.com">Satrec Initiative</a>. Prior to that I completed my PhD. from <a href="http://www.gist.ac.kr">Gwangju Insitute of Science and Technology</a> advised by <a href="http://mlv.gist.ac.kr/mlv_prof">Dr. Moongu Jeon</a>. I have broadly worked on machine learning and computer vision problems and biomedical applications. I am currently working on applying deep learning technology using satellite imagery and creating new business models. You may find my Google scholar profile <a href="https://scholar.google.co.kr/citations?user=tOzFCbIAAAAJ&amp;hl=en">here</a>.
-     </p>
-        <h3>Contact: taylor.taegyun.jeon@gmail.com<br/></h3>
-          <a href="https://www.facebook.com/taegyun.jeon"  class="btn btn-info" role="button"> <i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
-	  <a href="https://github.com/tgjeon/"  class="btn btn-info" role="button"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-          <a href="https://linkedin.com/in/tgjeon"  class="btn btn-info" role="button"> <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
-          <a href="https://twitter.com/taylortgjeon" class="btn btn-info" role="button"> <i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+      <p style="font-weight:100;font-size:25px">I'm a Technical Intern (Machine Learning) at <a href="https://www.synopsys.com">Synopsys</a>.
+				And also working as Research Associate at <a href="https://academy.must.co.in/">MUST Research Academy</a>, Creating course content, demo projects and helping students in their Capstone Projects.
+				I founded a community of Machine learning enthusiasts on Instagram <a href="https://instagram.com/">@learn.machinelearning</a>.
+				Prior to that I did my internship at <a href="http://www.smatsocial.com">Smatsocial</a>, moslty work on python and related technologies to get data from different social platforms ad recommend them to the clients.
+				I have broadly worked on machine learning and started exploring Natural language processing and Computer vision.
+			</p>
+        <h3>Contact: hello@udaykiran.dev<br/></h3>
+          <a href="mailto:hello@udaykiran.dev"  class="btn btn-info" role="button"> <i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i></a>
+	  <a href="https://github.com/udaykiranreddykondreddy/"  class="btn btn-info" role="button"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+          <a href="https://linkedin.com/in/udaykirankondredyy"  class="btn btn-info" role="button"> <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/ukondreddy1" class="btn btn-info" role="button"> <i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+					<a href="https://instagram.com/udaykiran.kondreddy" class="btn btn-info" role="button"> <i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
     </div>
 
   </div>
