--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 <li><a href="blog/index.html">Community</a></li>
 								<li><a href="projects/index.html">Projects</a></li>
 								<li><a href="certification/index.html">Certifications</a></li>
-                <li><a href="files/cv-tgjeon.pdf">CV</a></li>
+                <li><a href="files/udaykiranreddy_resume.pdf">CV</a></li>
+								<li><embed src="files/udaykiranreddy_resume.pdf" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html"></li>
             </ul>
         </div>
     </div>
