--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				I have broadly worked on machine learning and started exploring Natural language processing and Computer vision.
 			</p>
         <h3>Contact: hello@udaykiran.dev<br/></h3>
-          <a href="mailto:hello@udaykiran.dev"  class="btn btn-info" role="button"> <i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i></a>
+          <a href="mailto:hello@udaykiran.dev"  class="btn btn-info" role="button"> <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
 	  <a href="https://github.com/udaykiranreddykondreddy/"  class="btn btn-info" role="button"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
           <a href="https://linkedin.com/in/udaykirankondredyy"  class="btn btn-info" role="button"> <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
           <a href="https://twitter.com/ukondreddy1" class="btn btn-info" role="button"> <i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
