--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <img class="img-rounded" src="images/udaykiran.jpg" style="width:90%"  alt="">
+      <img class="rotate270" src="images/udaykiran.jpg" style="width:90%"  alt="">
     </div>
     <div class="col-sm-8">
 
