--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="publications.html">Talks/Seminars/Workshops</a></li>
-                <li><a href="blog/index.html">Community</a></li>
+                <li><a href="community/index.html">Community</a></li>
 								<li><a href="projects/index.html">Projects</a></li>
 								<li><a href="certification/index.html">Certifications</a></li>
                 <li><a href="files/udaykiranreddy_resume.pdf">CV</a></li>
@@ -47,7 +47,7 @@
 
       <p style="font-weight:100;font-size:25px">I'm a Technical Intern (Machine Learning) at <a href="https://www.synopsys.com">Synopsys</a>.
 				And also working as Research Associate at <a href="https://academy.must.co.in/">MUST Research Academy</a>, Creating course content, demo projects and helping students in their Capstone Projects.
-				I founded a community of Machine learning enthusiasts on Instagram <a href="https://instagram.com/">@learn.machinelearning</a>.
+				I founded a community of Machine learning enthusiasts on Instagram <a href="https://instagram.com/learn.machinelearning">@learn.machinelearning</a>.
 				Prior to that I did my internship at <a href="http://www.smatsocial.com">Smatsocial</a>, moslty work on python and related technologies to get data from different social platforms ad recommend them to the clients.
 				I have broadly worked on machine learning and started exploring Natural language processing and Computer vision.
 			</p>
