--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="navbar" class="navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="publications.html">Talks/Seminars/Workshops</a></li>
+                <li><a href="talks.html">Talks/Seminars/Workshops</a></li>
                 <li><a href="community/index.html">Community</a></li>
 								<li><a href="projects/index.html">Projects</a></li>
 								<li><a href="certification/index.html">Certifications</a></li>
@@ -53,7 +53,7 @@
 			</p>
         <h3>Contact: hello@udaykiran.dev<br/></h3>
           <a href="mailto:hello@udaykiran.dev"  class="btn btn-info" role="button"> <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
-	  <a href="https://github.com/udaykiranreddykondreddy/"  class="btn btn-info" role="button"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+	  			<a href="https://github.com/udaykiranreddykondreddy/"  class="btn btn-info" role="button"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
           <a href="https://linkedin.com/in/udaykirankondredyy"  class="btn btn-info" role="button"> <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
           <a href="https://twitter.com/ukondreddy1" class="btn btn-info" role="button"> <i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
 					<a href="https://instagram.com/udaykiran.kondreddy" class="btn btn-info" role="button"> <i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
