--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="navbar" class="navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="talks.html">Talks/Seminars/Workshops</a></li>
+                <li><a href="talks.html">Talks</a></li>
                 <li><a href="community/index.html">Community</a></li>
 								<li><a href="projects/index.html">Projects</a></li>
 								<li><a href="certification/index.html">Certifications</a></li>
