--- a/talks.html
+++ b/talks.html
@@ -27,10 +27,12 @@
 
             <div id="navbar" class="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="publications.html">Publications</a></li>
-                    <li><a href="blog/index.html">Blog</a></li>
-                    <li><a href="files/cv-tgjeon.pdf">CV</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="talks.html">Talks</a></li>
+                  <li><a href="community/index.html">Community</a></li>
+                  <li><a href="projects/index.html">Projects</a></li>
+                  <li><a href="certification/index.html">Certifications</a></li>
+                  <li><a href="files/udaykiranreddy_resume.pdf">CV</a></li>
                 </ul>
             </div>
         </div>
