--- a/talks.html
+++ b/talks.html
@@ -50,9 +50,8 @@
                 <h3 class="talks">prerequisites and why Math for machine learning</h3 class="paper_title">
                 <u>Uday kiran</u>
                 <br/> Presented as a talk at CHAI(coffee with AI) Hyderabad #1 hosted by learn.machinelearning Instagram page community.
-                <br/>
                 <br/> I talked on what are the prerequisites and why mathematics is important for machine learning and how to get started.
-                <a href="https://speakerdeck.com/udaykiran/prerequisites-and-why-math-for-machine-learning/"  class="btn btn-info" role="button"> <i class="fa fa-presentation fa-2x" aria-hidden="true"></i></a>
+                <br/><a href="https://speakerdeck.com/udaykiran/prerequisites-and-why-math-for-machine-learning/"  class="btn btn-info" role="button"> <i class="fas fa-file-pdf fa-2x" aria-hidden="true"></i>Slides</a>
             </ul>
 
         </div>
