--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <img class="rotateimg270" src="images/udaykiran.jpg" width="300" height="300">
+      <img class="rotateimg270" src="images/udaykiran.jpg" style="transform:rotate(90deg);">
     </div>
     <div class="col-sm-8">
 
