--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="col-sm-8">
 
-      <p style="font-weight:100;font-size:25px">I'm a Technical Intern (Machine Learning) at <a href="https://www.synopsys.com">Synopsys</a>.
+      <p style="font-weight:100;font-size:25px">I'm working as a Technical Intern (Machine Learning) at <a href="https://www.synopsys.com">Synopsys</a>.
 				And also working as Research Associate at <a href="https://academy.must.co.in/">MUST Research Academy</a>, Creating course content, demo projects and helping students in their Capstone Projects.
 				I founded a community of Machine learning enthusiasts on Instagram <a href="https://instagram.com/learn.machinelearning">@learn.machinelearning</a> with over 84,000 members.
 				Prior to that I did my internship at <a href="http://www.smatsocial.com">Smatsocial</a>, moslty work on python and related technologies to get data from different social platforms ad recommend them to the clients.
