--- a/projects.html
+++ b/projects.html
@@ -49,9 +49,10 @@
             <ul>
                 <h3 class="projects">Morse code Generation with Fingers</h3>
                 <u>Uday kiran</u>
-                <br/> Presented as a talk at CHAI(coffee with AI) Hyderabad #1 hosted by learn.machinelearning Instagram page community.
-                <br/> I talked on what are the prerequisites and why mathematics is important for machine learning and how to get started.
-                <br/><a href="https://speakerdeck.com/udaykiran/prerequisites-and-why-math-for-machine-learning/"  class="btn btn-info" role="button"> <i class="fas fa-file-pdf fa-2x" aria-hidden="true"></i>Slides</a>
+                <br/> My idea is to generate Morse Code with fingers. For more info check below links
+                <br/>
+                <br/><a href="https://github.com/udaykiranreddykondreddy/Morse-code-with-fingers"  class="btn btn-info" role="button"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                <a href="https://www.youtube.com/watch?v=n-jaHrTmmo0"  class="btn btn-info" role="button"> <i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a>
             </ul>
 
         </div>
