--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
 
 
         <div style="font-size:90%">
-            <h3 class="Projects">2020</h3 class="talks">
+            <h3 class="Projects">2019</h3 class="projects">
             <ul>
                 <h3 class="projects">Morse code Generation with Fingers</h3>
                 <u>Uday kiran</u>
@@ -54,7 +54,29 @@
                 <br/><a href="https://github.com/udaykiranreddykondreddy/Morse-code-with-fingers"  class="btn btn-info" role="button"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
                 <a href="https://www.youtube.com/watch?v=n-jaHrTmmo0"  class="btn btn-info" role="button"> <i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a>
             </ul>
-
+            <h3 class="Projects">2018</h3 class="projects">
+            <ul>
+                <h3 class="projects">Multi-class emotion AI by reconstructing linguistic context of words</h3>
+                <u>Uday kiran</u>
+                <br/> This project mainly concentrates on categorizing the tweet into multiple class and the probability of that class. We used many algorithms like Naive Bayes, SVM, Decision trees,(avg tf-idf,idf) word2vec and we got 89% accuracy with avg tf-idf word2vec and that is low because of fewer data. we used euclidian distance to calculate the similarity between statements and we assigned the same sentiment which have highest similarity value.
+                <br/>
+                <br/><a href="https://github.com/KLGLUG/Sentimental-Analysis-on-Twitter"  class="btn btn-info" role="button"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+            </ul>
+            <h3 class="Projects">2017</h3 class="projects">
+            <ul>
+                <h3 class="projects">Android Application ( KLEF FN )</h3>
+                <u>Uday kiran</u>
+                <br/> Notification app to send college related and clubs related notifications to all students. This app also have study resources, e-login, website access, ERP, LMS.
+                <br/>
+                <br/><a href="https://play.google.com/store/apps/details?id=duobroscreations.klufn&hl=en"  class="btn btn-info" role="button"> <i class="fa fa-android fa-2x" aria-hidden="true"></i></a>
+            </ul>
+            <ul>
+                <h3 class="projects">hybrid cipher</h3>
+                <u>Uday kiran</u>
+                <br/> Encryption algorithm with combination of Caesar cipher and Fibonacci series. Check the link below for more information
+                <br/>
+                <br/><a href="https://github.com/udaykiranreddykondreddy/Hybrid-Cipher"  class="btn btn-info" role="button"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+            </ul>
         </div>
     </div>
 
