--- a/talks.html
+++ b/talks.html
@@ -51,7 +51,7 @@
                 <u>Uday kiran</u>
                 <br/> Presented as a talk at CHAI(coffee with AI) Hyderabad #1 hosted by learn.machinelearning Instagram page community.
                 <br/> I talked on what are the prerequisites and why mathematics is important for machine learning and how to get started.
-                <br/><a href="https://speakerdeck.com/udaykiran/prerequisites-and-why-math-for-machine-learning/"  class="btn btn-info" role="button"> <i class="fas fa-file-pdf fa-2x" aria-hidden="true"></i>Slides</a>
+                <br/><a href="https://speakerdeck.com/udaykiran/prerequisites-and-why-math-for-machine-learning/"  class="btn btn-info" role="button"> <i class="fa fa-file-powerpoint-o fa-2x" aria-hidden="true"></i></a>
             </ul>
 
         </div>
