--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="talks.html">Talks</a></li>
                 <li><a href="community/index.html">Community</a></li>
-								<li><a href="projects/index.html">Projects</a></li>
+								<li><a href="projects.html">Projects</a></li>
 								<li><a href="certification/index.html">Certifications</a></li>
                 <li><a href="files/udaykiranreddy_resume.pdf">CV</a></li>
             </ul>
